update moti name

--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
     box-sizing: border-box;
 }
 :root{
-    --color-pink: #eba7f6;
-    --color-white: #977de8;
-    --color-black: #333;
-    --color-text-pink: #FF7882;
-    --color-heart: #FF7882;
-    --color-bg-letter: #fff8e4;
-    --color-border: #6b8a2c;
+    --color-pink: #FF90B3;
+    --color-white: #FDFCFD;
+    --color-black: #2C2C2C;
+    --color-text-pink: #FF4D6D;
+    --color-heart: #ffd6e8;
+    --color-bg-letter: #FFE5B4;
+    --color-border: #B197FC;
 }
 html{
     height: 100%;
